--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@types/node": "10.12.18",
     "@types/react": "16.7.21",
     "@types/react-dom": "16.0.11",
+    "node-sass": "^4.11.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-particles-js": "^2.4.2",
     "react-scripts": "2.1.3",
     "typescript": "3.2.4"
   },
